--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -1,42 +1,59 @@
-body{
-    background-color: rgb(194, 194, 194);
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+* {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
+body {
+    background-color: rgb(194, 194, 194);
+    font-family: 'Pacifico', cursive;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
 
 .navbar {
-    background-color: #333;
-    padding: 10px;
+    position: fixed;
+    top: 10;
+    left: 0;
+    width: 100%;
+    background-color: #f8f8f8;
     display: flex;
-    justify-content: flex-end;
-}
-
-.navbar nav {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center; 
-}
-
-.navbar .logo-link {
-    margin-right: auto; 
-}
-
-.navbar img {
-    position: absolute;
-    height: 50px; 
-    left: 100px;
-    top: 11px;
-}
-
-.navbar a {
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .logo img {
+    height: 60px; /* Adjust the height as needed */
+  }
+  
+  .links a {
+    margin-right: 10px;
     text-decoration: none;
-    color: #fff;
-    padding: 10px;
-}
-
-.navbar a:hover {
-    background-color: #555;
-}
-
-.navbar li {
-    list-style: none;
-}
+    color: #333;
+  }
+  
+  /* Media Query for Responsive Design */
+  @media (max-width: 768px) {
+    .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .links {
+      margin-top: 10px;
+    }
+  
+    .links a {
+      display: block;
+      margin-bottom: 5px;
+    }
+  }
+  
