--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
+
 
 * {
     user-select: none;
@@ -9,7 +11,7 @@
 
 body {
     background-color: rgb(194, 194, 194);
-    font-family: 'Pacifico', cursive;
+    font-family: 'Satisfy', cursive;
     background-image: url("");
     background-repeat: no-repeat;
     background-position-x: center;
@@ -55,5 +57,46 @@ body {
       display: block;
       margin-bottom: 5px;
     }
+  }
+  
+
+  .hero {
+    background-image: url('https://wallpaperaccess.com/full/254367.png');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000000;
+  }
+  
+  .hero-content {
+    text-align: center;
+  }
+  
+  .hero-content h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+  
+  .hero-content p {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+  
+  .cta-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #ff6600;
+    color: #000000;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+  
+  .cta-button:hover {
+    background-color: #e65c00;
   }
   
