changed the main bg image

--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -61,7 +61,7 @@ body {
   
 
   .hero {
-    background-image: url('https://wallpaperaccess.com/full/254367.png');
+    background-image: url('https://images3.alphacoders.com/105/105487.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
