changed urls to match personal github storeage

--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -62,7 +62,7 @@ body {
   
 
   .main {
-    background-image: url('https://rare-gallery.com/uploads/posts/5338477-tower-eiffel-tower-night-architecture-light-tourism-tourist-structure-landmark-glow-looking-up-paris-tall-eiffel-france-popular-sky-vertical-lightning-night-sky-free-stock-photos.jpg');
+    background-image: url('https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/main_bg.jpg?raw=true');
     background-size: cover;
     background-position: center;
     height: 100vh;
