--- a/Assets/CSS/bookings.css
+++ b/Assets/CSS/bookings.css
@@ -57,3 +57,30 @@ body {
     color: #333;
   }
   
+
+  footer {
+    background-color: transparent;
+    text-align: center;
+    padding: 10px;
+    color: white;
+  }
+
+
+  @media (max-width: 768px) {
+    .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .links {
+      margin-top: 10px;
+    }
+  
+    .links a {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+  
+    
+  }
