--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -153,8 +153,8 @@ body {
     }
 
     .image-row img {
-      max-width: 100%;
-      height: 50%;
+      max-width: 50%;
+      height: auto;
       margin: 2px;
     }
   
