--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -90,6 +90,10 @@ body {
     color: red;
   }
   
+
+  #num {
+    color: red;
+  }
   .main-content p {
     font-size: 18px;
     margin-bottom: 30px;
