--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -61,6 +61,10 @@ body {
   li a:hover {
     background-color: #868686;
   }
+
+  .contact {
+    float: right;
+  }
   
   .active {
     background-color: gold;
