--- a/Assets/CSS/bookings.css
+++ b/Assets/CSS/bookings.css
@@ -30,7 +30,10 @@ body {
   100% { opacity: 1; }
 }
 
-
+a {
+  color: white;
+  text-decoration: none;
+}
 
 ::-webkit-scrollbar {
     display: none;
