--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -136,52 +136,83 @@ button:hover {
   background-color: #aaaaaa; 
 } 
 
-   .image-row {
-    display: flex;
-    justify-content: space-around;
+.image-row {
+  display: flex;
+  justify-content: space-around;
+}
+
+.image-row img {
+  max-width: 100%;
+  height: auto;
+  margin: 2px;
+  border-radius: 0.25rem;
+  border: 2px dotted #ffffff;
+  position: relative;
+}
+
+.image-wrapper {
+  position: relative;
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.image-overlay h2,
+.image-overlay p {
+  margin: 0;
+  padding: 5px;
+  text-align: center;
+}
+
+.image-wrapper:hover .image-overlay {
+  opacity: 1;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
   }
-  
+
+  .links {
+    margin-top: 10px;
+  }
+
+  .links a {
+    display: block;
+    margin-bottom: 5px;
+  }
+
+  .about-section {
+    flex-direction: column;
+  }
+
   .image-row img {
-    max-width: 100%;
+    margin: 1px;
+  }
+
+  .image-row img {
+    max-width: 32%;
     height: auto;
     margin: 2px;
-    border-radius: 0.25rem;
-    border: 2px dotted #ffffff;
   }
+}
 
 
 
-  @media (max-width: 768px) {
-    .navbar {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .links {
-      margin-top: 10px;
-    }
-  
-    .links a {
-      display: block;
-      margin-bottom: 5px;
-    }
-  
-    .about-section {
-      flex-direction: column;
-    }
-    
-    .image-row img {
-      margin: 1px;
-    }
-
-    .image-row img {
-      max-width: 32%;
-      height: auto;
-      margin: 2px;
-    }
-  
-    
-  }
 
 
 
