--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -42,12 +42,20 @@ a {
   text-decoration: none;
 }
 
+
+
+
   ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #ffffff;
+    background-color: transparent;
+    opacity: 1;
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+
   }
   
   li {
@@ -55,8 +63,9 @@ a {
   }
   
   li a {
+    opacity: 100;
     display: block;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
