added the cool span red for numbers

--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -67,9 +67,17 @@ a {
     
 }
 
-h1  {
+.header-heading  {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-decoration: underline;
+    text-decoration-color: black;
   }
+
+
+#num {
+    color: red;
+
+}
