--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -77,6 +77,15 @@ a {
   }
 
 
+  .header-para  {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 250%);
+    
+  }
+
+
 #num {
     color: red;
 
