--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -1,104 +1,243 @@
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 
-*{
 
+* {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    scroll-behavior: smooth;
 }
 
 body {
-    background-color: white;
-    font-family: 'Kaushan Script', cursive;
+    background-color: #14171A;
+    font-family: 'Satisfy', cursive;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-position-x: center; 
     margin: 0;
+    padding: 0;
+}
 
+
+.fade-in { 
+  animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+
+
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 a {
+  color: white;
+  text-decoration: none;
+}
+
+
+
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: transparent;
+    opacity: 1;
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+
+  }
+
+  li {
+    float: left;
+  }
+
+  li a {
+    opacity: 100;
+    display: block;
     color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
   }
-  
-  
-  
-  
-    ul {
-      list-style-type: none;
 
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: #202124;
-      opacity: 1;
-      position: fixed;
-      width: 100%;
-      z-index: 100;
-  
-    }
-    
-    li {
-      float: left;
-    }
-    
-    li a {
-      opacity: 100;
-      display: block;
-      color: rgb(255, 255, 255);
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-    
-    li a:hover {
-      background-color: #868686;
-    }
-  
-  
-    
-    .active {
-      background-color: gold;
-    }
+  li a:hover {
+    background-color: #868686;
+  }
 
-    .header {
-      position: relative;
-      height: 45vh;
-      width: 100%;
-    }
-    
-    .header img {
-      width: 100%;
-      height: auto;
-    }
-    
-    .header-heading {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-decoration: underline;
-      text-decoration-color: black;
-      color: white;
-      z-index: 1;
-    }
-    
-    .header-para {
-      position: absolute;
-      top: 60%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      z-index: 1;
-    }
-    
-    #num {
-      color: red;
-    }
-    
-    @media only screen and (max-width: 768px) {
-      .header-heading {
-        font-size: 24px;
-      }
-    
-      .header-para {
-        font-size: 16px;
-      }
-    }
-    
+  .contact {
+    float: right;
+  }
+
+  .active {
+    background-color: gold;
+  }
+
+
+  .main {
+    background-image: url('https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/main_bg.jpg?raw=true');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+  }
+
+  .main-content {
+    text-align: center;
+  }
+
+  .main-content h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+
+  .main-content #num {
+    color: red;
+  }
+
+
+  #num {
+    color: red;
+  }
+  .main-content p {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+
+  footer {
+    background-color: transparent;
+    text-align: center;
+    padding: 10px;
+    color: white;
+  }
+
+
+button {
+
+  display: inline-block;
+  outline: none;
+
+  padding: 0 16px;
+  background-color: #fff;
+  border-radius: 0.25rem;
+  border: 2px solid #dddbda;
+  color: #0070d2;
+  line-height: 30px;
+
+
+
+}
+
+button:hover {
+  background-color: #aaaaaa; 
+} 
+
+.image-row {
+  display: flex;
+  justify-content: space-around;
+}
+
+.image-row img {
+  max-width: 100%;
+  height: auto;
+  margin: 2px;
+  border-radius: 0.25rem;
+  border: 2px dotted #ffffff;
+  position: relative;
+}
+
+.image-wrapper {
+  position: relative;
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.image-overlay h2{
+  margin: 0;
+  padding: 5px;
+  text-align: center;
+}
+
+
+.image-overlay p {
+  margin: 0;
+  padding: 5px;
+  text-align: center;
+}
+
+.image-wrapper:hover .image-overlay {
+  opacity: 1;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .links {
+    margin-top: 10px;
+  }
+
+  .links a {
+    display: block;
+    margin-bottom: 5px;
+  }
+
+  .about-section {
+    flex-direction: column;
+  }
+
+  .image-row img {
+    margin: 1px;
+  }
+
+  .image-row img {
+    max-width: 32%;
+    height: auto;
+    margin: 2px;
+  }
+
+  .image-overlay h2{
+    margin: 0;
+    padding: 5px;
+    text-align: center;
+    font-size: 10px;
+  }
+
+
+  .image-overlay p {
+    margin: 0;
+    padding: 5px;
+    text-align: center;
+    font-size: 5px;
+  }
+}
+
