--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -88,7 +88,7 @@ a {
     background-image: url('https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/main_bg.jpg?raw=true');
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -145,55 +145,21 @@ button:hover {
   background-color: #aaaaaa; 
 } 
 
-.image-row {
+
+
+.gallery {
   display: flex;
-  justify-content: space-around;
-}
-
-.image-row img {
-  max-width: 100%;
-  height: auto;
-  margin: 2px;
-  border-radius: 0.25rem;
-  border: 2px dotted #ffffff;
-  position: relative;
-}
-
-.image-wrapper {
-  position: relative;
-}
-
-.image-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+  justify-content: space-around;
+
+  
 }
 
-.image-overlay h2{
-  margin: 0;
+.imagerow {
+  flex: 33.33%;
   padding: 5px;
-  text-align: center;
-}
 
-
-.image-overlay p {
-  margin: 0;
-  padding: 5px;
-  text-align: center;
-}
-
-.image-wrapper:hover .image-overlay {
-  opacity: 1;
+  
 }
 
 @media (max-width: 768px) {
@@ -211,33 +177,9 @@ button:hover {
     margin-bottom: 5px;
   }
 
-  .about-section {
-    flex-direction: column;
+  .imgrow {
+    width: 100%;
   }
 
-  .image-row img {
-    margin: 1px;
-  }
-
-  .image-row img {
-    max-width: 32%;
-    height: auto;
-    margin: 2px;
-  }
-
-  .image-overlay h2{
-    margin: 0;
-    padding: 5px;
-    text-align: center;
-    font-size: 10px;
-  }
-
-
-  .image-overlay p {
-    margin: 0;
-    padding: 5px;
-    text-align: center;
-    font-size: 5px;
-  }
 }
 
