--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -85,7 +85,7 @@ a {
 
 
   .main {
-    background-image: url('https:..holiday2go.netlify.app/Assets/Images/main.gif');
+    background-image: url('https://holiday2go.netlify.app/Assets/Images/main.gif');
     background-size: cover;
     background-position: center;
     height: 50vh;
