--- a/Assets/CSS/bookings.css
+++ b/Assets/CSS/bookings.css
@@ -154,8 +154,7 @@ li a:hover {
   } 
 
   .form {
-    max-width: auto;
-    margin: 0 auto;
+    margin: 0;
     padding: 20px;
     background-color: #f7f7f7;
     border: 1px solid #ccc;
@@ -174,8 +173,8 @@ li a:hover {
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 6px solid #ccc;
+    border-radius: 10px;
     box-sizing: border-box;
   }
 
@@ -184,8 +183,9 @@ li a:hover {
     color: white;
     padding: 10px 15px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
+    width: 100%;
   }
 
   form input[type="submit"]:hover {
