--- a/Assets/CSS/form.css
+++ b/Assets/CSS/form.css
@@ -20,3 +20,20 @@ body {
     padding: 0;
 
   }
+
+
+  .fade-in { 
+    animation: fadeIn 5s;
+  }
+  
+  @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  
+  
+  
+  ::-webkit-scrollbar {
+      display: none;
+  }
