--- a/Assets/CSS/form.css
+++ b/Assets/CSS/form.css
@@ -37,3 +37,44 @@ body {
   ::-webkit-scrollbar {
       display: none;
   }
+
+  #qrcode {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 15%;
+    
+  }
+
+  .main {
+    background-image: url('');
+    background-size: cover;
+    background-position: center;
+    height: 25vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+  }
+
+  .main-content {
+    text-align: center;
+  }
+
+  .main-content h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+
+  .main-content #num {
+    color: red;
+  }
+
+
+  #num {
+    color: red;
+  }
+  .main-content p {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
