got the logic to work
Chrome does not redirect on user click on the forms submit button. So i had to change its type

--- a/Assets/CSS/bookings.css
+++ b/Assets/CSS/bookings.css
@@ -188,7 +188,7 @@ li a:hover {
     box-sizing: border-box;
   }
 
-  form input[type="submit"] {
+  form input[type="button"] {
     background-color: #4CAF50;
     color: white;
     padding: 10px 15px;
@@ -198,7 +198,7 @@ li a:hover {
     width: 100%;
   }
 
-  form input[type="submit"]:hover {
+  form input[type="button"]:hover {
     background-color: #45a049;
   }
 
