created the tickets page

--- a/Assets/CSS/form.css
+++ b/Assets/CSS/form.css
@@ -40,9 +40,10 @@ body {
 
   #qrcode {
     display: flex;
+    position: absolute;
     justify-content: center;
     align-items: center;
-    width: 15%;
+    left: 37%;
     
   }
 
