--- a/Assets/CSS/bookings.css
+++ b/Assets/CSS/bookings.css
@@ -205,7 +205,7 @@ li a:hover {
 
   form input[type="reset"] {
     background-color: #ff0000;
-    color: white;
+    color: #ff0000;
     padding: 10px 15px;
     border: none;
     border-radius: 10px;
@@ -215,5 +215,6 @@ li a:hover {
 
   form input[type="reset"]:hover {
     background-color: #d31a1a;
+    color: #d31a1a;
   }
 
