--- a/Assets/CSS/form.css
+++ b/Assets/CSS/form.css
@@ -103,3 +103,12 @@ body {
   justify-content: center;
   color: bisque;
 }
+
+
+@media (max-width: 768px) {
+  #qrcode {
+    position: absolute;
+    left: 80px;
+    width: 250px;
+  }
+}
