--- a/Assets/CSS/bookings.css
+++ b/Assets/CSS/bookings.css
@@ -234,27 +234,28 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #ffffff;
+    background-color: #14171A;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 9999;
-}
-
-#loader {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
+  }
+  
+  #loader {
+    border: 16px solid transparent;
+    border-top: 16px solid white;
     border-radius: 50%;
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
+  }
+  
+  @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-}
-
-#content {
+  }
+  
+  #content {
     display: none;
-}
+  }
+  
