--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -177,7 +177,7 @@ button:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
+  background-color: #14171A;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -185,8 +185,8 @@ button:hover {
 }
 
 #loader {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
+  border: 16px solid transparent;
+  border-top: 16px solid white;
   border-radius: 50%;
   width: 120px;
   height: 120px;
