--- a/Assets/CSS/bookings.css
+++ b/Assets/CSS/bookings.css
@@ -189,21 +189,18 @@ li a:hover {
   }
 
 
-
-
-
-
-button {
+form input[type="button"] {
   background-color: #4CAF50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    width: 100%;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 100%;
 }
 
-button:hover {
+
+form input[type="button"]:hover {
   background-color: #45a049;
 
 }
